--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "deploy": "twilio-run deploy"
   },
   "dependencies": {
-    "twilio": "^3.56",
+    "@twilio/runtime-handler": "^2.0.3",
     "axios": "*",
-    "@twilio/runtime-handler": "1.2.4"
+    "twilio": "^5.2.3"
   },
   "devDependencies": {
-    "twilio-run": "^3.4.4"
+    "twilio-run": "^4.0.3"
   },
   "engines": {
     "node": "14"
