--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "twilio-run deploy"
   },
   "dependencies": {
-    "@twilio/runtime-handler": "^2.0.3",
+    "@twilio/runtime-handler": "2.0.3",
     "axios": "*",
     "twilio": "^5.2.3"
   },
